--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "arrowParens": "avoid"
   },
   "devDependencies": {
-    "canopic": "^0.2.1"
+    "canopic": "^0.2.1",
+    "prettier": "1.19.1"
   }
 }
